--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -12,8 +12,6 @@ cache-size = 1000
 
 address=/www.ftchinese.com/118.143.65.103
 address=/ftchinese.com/118.143.65.103
-#address=/services.googleapis.cn/172.217.5.202
-#address=/github-production-release-asset-2e65be.s3.amazonaws.com/192.168.88.1
 
 all-servers 
 #server=8.8.8.8
@@ -22,9 +20,199 @@ server=127.0.0.1#5300
 server=/services.googleapis.cn/127.0.0.1#5300
 server=/cn/127.0.0.1#5353
 
-#-----csdn---------------
-server=/csdn.net/127.0.0.1#5353
-server=/csdnimg.cn/127.0.0.1#5353
+#-----alibaba---------------
+server=/25pp.com/127.0.0.1#5353
+server=/56che.com/127.0.0.1#5353
+server=/95095.com/127.0.0.1#5353
+server=/9game.cn/127.0.0.1#5353
+server=/aliapp.org/127.0.0.1#5353
+server=/alibaba-inc.com/127.0.0.1#5353
+server=/alibaba.com/127.0.0.1#5353
+server=/alibabacapital.com/127.0.0.1#5353
+server=/alibabacorp.com/127.0.0.1#5353
+server=/alibabadoctor.com/127.0.0.1#5353
+server=/alibabafuturehotel.com/127.0.0.1#5353
+server=/alibabagroup.com/127.0.0.1#5353
+server=/alibabaplanet.com/127.0.0.1#5353
+server=/alibabaued.com/127.0.0.1#5353
+server=/alibabausercontent.com/127.0.0.1#5353
+server=/aliexpress.com/127.0.0.1#5353
+server=/alifanyi.com/127.0.0.1#5353
+server=/alihealth.com.cn/127.0.0.1#5353
+server=/alihealth.hk/127.0.0.1#5353
+server=/aliimg.com/127.0.0.1#5353
+server=/alikmd.com/127.0.0.1#5353
+server=/alimama.com/127.0.0.1#5353
+server=/alimebot.com/127.0.0.1#5353
+server=/alimei.com/127.0.0.1#5353
+server=/alios.cn/127.0.0.1#5353
+server=/alipay.com/127.0.0.1#5353
+server=/alipayobjects.com/127.0.0.1#5353
+server=/aliplus.com/127.0.0.1#5353
+server=/aliresearch.com/127.0.0.1#5353
+server=/alisoft.com/127.0.0.1#5353
+server=/alisports.com/127.0.0.1#5353
+server=/alitianji.com/127.0.0.1#5353
+server=/aliunicorn.com/127.0.0.1#5353
+server=/aliway.com/127.0.0.1#5353
+server=/aliwork.com/127.0.0.1#5353
+server=/alixiaomi.com/127.0.0.1#5353
+server=/alizhaopin.com/127.0.0.1#5353
+server=/alyms.cn/127.0.0.1#5353
+server=/asczwa.com/127.0.0.1#5353
+server=/asczxcefsv.com/127.0.0.1#5353
+server=/asmlink.cn/127.0.0.1#5353
+server=/atatech.org/127.0.0.1#5353
+server=/b2byao.com/127.0.0.1#5353
+server=/bazai.com/127.0.0.1#5353
+server=/bcvbw.com/127.0.0.1#5353
+server=/cheng.xin/127.0.0.1#5353
+server=/cloudeagle.cn/127.0.0.1#5353
+server=/damai.cn/127.0.0.1#5353
+server=/dayu.com/127.0.0.1#5353
+server=/dfkhgj.com/127.0.0.1#5353
+server=/doctoryou.ai/127.0.0.1#5353
+server=/doctoryou.cn/127.0.0.1#5353
+server=/dongting.com/127.0.0.1#5353
+server=/dratio.com/127.0.0.1#5353
+server=/emas-poc.com/127.0.0.1#5353
+server=/gongyi.xin/127.0.0.1#5353
+server=/ialicdn.com/127.0.0.1#5353
+server=/iconfont.cn/127.0.0.1#5353
+server=/ics.design/127.0.0.1#5353
+server=/jhgtgb.com/127.0.0.1#5353
+server=/kanbox.com/127.0.0.1#5353
+server=/lazada.com/127.0.0.1#5353
+server=/liangxinyao.com/127.0.0.1#5353
+server=/m-now.cn/127.0.0.1#5353
+server=/maitix.com/127.0.0.1#5353
+server=/mdeer.com/127.0.0.1#5353
+server=/mei.com/127.0.0.1#5353
+server=/miaostreet.com/127.0.0.1#5353
+server=/mshare.cc/127.0.0.1#5353
+server=/nic.xin/127.0.0.1#5353
+server=/philanthropy.xin/127.0.0.1#5353
+server=/phpwind.com/127.0.0.1#5353
+server=/phpwind.net/127.0.0.1#5353
+server=/qingtingtrip.com/127.0.0.1#5353
+server=/rexpos.cn/127.0.0.1#5353
+server=/saee.org.cn/127.0.0.1#5353
+server=/shenjing.com/127.0.0.1#5353
+server=/shuqi.com/127.0.0.1#5353
+server=/shuqireader.com/127.0.0.1#5353
+server=/sparenode.com/127.0.0.1#5353
+server=/supet.com/127.0.0.1#5353
+server=/ttpod.com/127.0.0.1#5353
+server=/wandoujia.com/127.0.0.1#5353
+server=/xinlingshou.cn/127.0.0.1#5353
+server=/yowhale.com/127.0.0.1#5353
+server=/yunos-inc.com/127.0.0.1#5353
+server=/yunos.com/127.0.0.1#5353
+server=/yushanfang.com/127.0.0.1#5353
+server=/zuodao.com/127.0.0.1#5353
+
+#-----aliyun---------------
+server=/alibabadns.com/127.0.0.1#5353
+server=/alicdn.com/127.0.0.1#5353
+server=/alidayu.com/127.0.0.1#5353
+server=/alidns.com/127.0.0.1#5353
+server=/aliyun-inc.com/127.0.0.1#5353
+server=/aliyun-iot-share.com/127.0.0.1#5353
+server=/aliyun.com/127.0.0.1#5353
+server=/aliyuncdn.com/127.0.0.1#5353
+server=/aliyuncs.com/127.0.0.1#5353
+server=/hichina.com/127.0.0.1#5353
+server=/ica-alliance.org/127.0.0.1#5353
+server=/mxhichina.com/127.0.0.1#5353
+
+#-----amap---------------
+server=/amap.com/127.0.0.1#5353
+server=/amapauto.com/127.0.0.1#5353
+server=/autonavi.com/127.0.0.1#5353
+server=/gaode.com/127.0.0.1#5353
+
+#-----baidu---------------
+server=/91.com/127.0.0.1#5353
+server=/aipage.com/127.0.0.1#5353
+server=/apollo.auto/127.0.0.1#5353
+server=/baidu.cn/127.0.0.1#5353
+server=/baidu.com/127.0.0.1#5353
+server=/baidubce.com/127.0.0.1#5353
+server=/baiducontent.com/127.0.0.1#5353
+server=/baidupcs.com/127.0.0.1#5353
+server=/baidustatic.com/127.0.0.1#5353
+server=/baifae.com/127.0.0.1#5353
+server=/baifubao.com/127.0.0.1#5353
+server=/bdimg.com/127.0.0.1#5353
+server=/bdstatic.com/127.0.0.1#5353
+server=/bdtjrcv.com/127.0.0.1#5353
+server=/bdydns.cn/127.0.0.1#5353
+server=/bdydns.net/127.0.0.1#5353
+server=/chuanke.com/127.0.0.1#5353
+server=/dlnel.com/127.0.0.1#5353
+server=/dlnel.org/127.0.0.1#5353
+server=/duapps.com/127.0.0.1#5353
+server=/dwz.cn/127.0.0.1#5353
+server=/hao123.com/127.0.0.1#5353
+server=/hao123img.com/127.0.0.1#5353
+server=/hao222.com/127.0.0.1#5353
+server=/haokan.com/127.0.0.1#5353
+server=/jomocdn.net/127.0.0.1#5353
+server=/jomodns.com/127.0.0.1#5353
+server=/mipcdn.com/127.0.0.1#5353
+server=/nuomi.com/127.0.0.1#5353
+server=/quyaoya.com/127.0.0.1#5353
+server=/smartapps.cn/127.0.0.1#5353
+server=/tieba.com/127.0.0.1#5353
+server=/tiebaimg.com/127.0.0.1#5353
+server=/xianfae.com/127.0.0.1#5353
+server=/xiaodutv.com/127.0.0.1#5353
+
+#-----bilibili---------------
+server=/acg.tv/127.0.0.1#5353
+server=/acgvideo.com/127.0.0.1#5353
+server=/b23.tv/127.0.0.1#5353
+server=/biliapi.com/127.0.0.1#5353
+server=/biliapi.net/127.0.0.1#5353
+server=/bilibili.com/127.0.0.1#5353
+server=/bilibiligame.net/127.0.0.1#5353
+server=/biligame.com/127.0.0.1#5353
+server=/biligame.net/127.0.0.1#5353
+server=/bilivideo.com/127.0.0.1#5353
+server=/hdslb.com/127.0.0.1#5353
+server=/im9.com/127.0.0.1#5353
+server=/mincdn.com/127.0.0.1#5353
+
+#-----bytedance---------------
+server=/bytecdn.cn/127.0.0.1#5353
+server=/bytedance.com/127.0.0.1#5353
+server=/bytedance.net/127.0.0.1#5353
+server=/bytedns.net/127.0.0.1#5353
+server=/byteimg.com/127.0.0.1#5353
+server=/douyin.com/127.0.0.1#5353
+server=/huaxiong.com/127.0.0.1#5353
+server=/jokecommunity.com/127.0.0.1#5353
+server=/neihanshequ.com/127.0.0.1#5353
+server=/pstatp.com/127.0.0.1#5353
+server=/snssdk.com/127.0.0.1#5353
+server=/toutiao.com/127.0.0.1#5353
+server=/toutiaocdn.com/127.0.0.1#5353
+server=/toutiaocloud.com/127.0.0.1#5353
+server=/toutiaohao.com/127.0.0.1#5353
+server=/toutiaohao.net/127.0.0.1#5353
+server=/toutiaoimg.cn/127.0.0.1#5353
+server=/toutiaoimg.com/127.0.0.1#5353
+server=/toutiaoimg.net/127.0.0.1#5353
+server=/toutiaopage.com/127.0.0.1#5353
+server=/wukong.com/127.0.0.1#5353
+server=/wukongwenda.cn/127.0.0.1#5353
+server=/wukongwenda.com/127.0.0.1#5353
+server=/zijiecdn.com/127.0.0.1#5353
+server=/zijiecdn.net/127.0.0.1#5353
+server=/zjcdn.com/127.0.0.1#5353
+server=/ixigua.com/127.0.0.1#5353
+server=/ixgvideo.com/127.0.0.1#5353
+server=/365yg.com/127.0.0.1#5353
 
 #-----douyu---------------
 server=/douyu.tv/127.0.0.1#5353
@@ -33,100 +221,171 @@ server=/douyucdn.cn/127.0.0.1#5353
 server=/douyuscdn.com/127.0.0.1#5353
 server=/douyutv.com/127.0.0.1#5353
 
+#-----huawei---------------
+server=/hicloud.com/127.0.0.1#5353
+server=/hihonor.com/127.0.0.1#5353
+server=/honor.cn/127.0.0.1#5353
 server=/huawei.com/127.0.0.1#5353
-server=/alibabadns.com/127.0.0.1#5353
-server=/alipay.com/127.0.0.1#5353
-server=/alipayobjects.com/127.0.0.1#5353
-server=/alicdn.com/127.0.0.1#5353
-server=/alikunlun.net/127.0.0.1#5353
-server=/chinanews.com/127.0.0.1#5353
-server=/cnblogs.com/127.0.0.1#5353
-server=/cctv.com/127.0.0.1#5353
-server=/cctvpic.com/127.0.0.1#5353
-server=/ipanda.com/127.0.0.1#5353
-server=/livechina.com/127.0.0.1#5353
-server=/tbcache.com/127.0.0.1#5353
-server=/taobao.com/127.0.0.1#5353
-server=/tmall.com/127.0.0.1#5353
-server=/163.com/127.0.0.1#5353
-server=/163yun.com/127.0.0.1#5353
-server=/126.com/127.0.0.1#5353
-server=/126.net/127.0.0.1#5353
-server=/127.net/127.0.0.1#5353
-server=/163.net/127.0.0.1#5353
-server=/netease.com/127.0.0.1#5353
-server=/360buyimg.com/127.0.0.1#5353
-server=/36kr.com/127.0.0.1#5353
-server=/xinhuanet.com/127.0.0.1#5353
-server=/jd.com/127.0.0.1#5353
-server=/jdcdn.com/127.0.0.1#5353
-server=/jianshu.com/127.0.0.1#5353
-server=/bilibili.com/127.0.0.1#5353
-server=/biliapi.com/127.0.0.1#5353
-server=/biliapi.net/127.0.0.1#5353
-server=/mincdn.com/127.0.0.1#5353
-server=/im9.com/127.0.0.1#5353
-server=/acg.tv/127.0.0.1#5353
-server=/hdslb.com/127.0.0.1#5353
-server=/b23.tv/127.0.0.1#5353
-server=/baidu.com/127.0.0.1#5353
-server=/baiducontent.com/127.0.0.1#5353
-server=/baidupcs.com/127.0.0.1#5353
-server=/baidustatic.com/127.0.0.1#5353
-server=/bdstatic.com/127.0.0.1#5353
-server=/baifubao.com/127.0.0.1#5353
-server=/bdimg.com/127.0.0.1#5353
-server=/duapps.com/127.0.0.1#5353
-server=/eastday.com/127.0.0.1#5353
+server=/huaweicloud.com/127.0.0.1#5353
+server=/vmall.com/127.0.0.1#5353
+server=/vmallres.com/127.0.0.1#5353
+
+#-----iqiyi---------------
+server=/71.am/127.0.0.1#5353
+server=/iqiyi.com/127.0.0.1#5353
+server=/iqiyipic.com/127.0.0.1#5353
+server=/pps.tv/127.0.0.1#5353
+server=/ppsimg.com/127.0.0.1#5353
 server=/qiyi.com/127.0.0.1#5353
 server=/qiyipic.com/127.0.0.1#5353
-server=/iqiyi.com/127.0.0.1#5353
-server=/quyaoya.com/127.0.0.1#5353
-server=/tiebaimg.com/127.0.0.1#5353
-server=/xiaodutv.com/127.0.0.1#5353
-server=/bytecdn.cn/127.0.0.1#5353
-server=/bytedance.com/127.0.0.1#5353
-server=/bytedns.net/127.0.0.1#5353
-server=/byteimg.com/127.0.0.1#5353
-server=/douyin.com/127.0.0.1#5353
-server=/douban.com/127.0.0.1#5353
-server=/huaxiong.com/127.0.0.1#5353
-server=/pstatp.com/127.0.0.1#5353
-server=/snssdk.com/127.0.0.1#5353
-server=/zhihu.com/127.0.0.1#5353
-server=/zhimg.com/127.0.0.1#5353
-server=/v2ex.com/127.0.0.1#5353
-server=/51cto.com/127.0.0.1#5353
-server=/ifeng.com/127.0.0.1#5353
-server=/toutiao.com/127.0.0.1#5353
-server=/toutiaocdn.com/127.0.0.1#5353
-server=/toutiaocloud.com/127.0.0.1#5353
-server=/toutiaopage.com/127.0.0.1#5353
-server=/wukong.com/127.0.0.1#5353
-server=/ixigua.com/127.0.0.1#5353
-server=/ixgvideo.com/127.0.0.1#5353
-server=/365yg.com/127.0.0.1#5353
+server=/qy.net/127.0.0.1#5353
+server=/71edge.com/127.0.0.1#5353
+
+#-----jd---------------
+server=/jd.com/127.0.0.1#5353
+server=/jdcdn.com/127.0.0.1#5353
+server=/jdcache.com/127.0.0.1#5353
+server=/jdcloud.com/127.0.0.1#5353
+server=/jdcloudcs.com/127.0.0.1#5353
+server=/jdcloud-api.com/127.0.0.1#5353
+server=/cloud-cdn.com/127.0.0.1#5353
+server=/jcloud-live.com/127.0.0.1#5353
+server=/jcloud-oss.com/127.0.0.1#5353
+server=/jcloud.com/127.0.0.1#5353
+server=/jcloudcache.com/127.0.0.1#5353
+server=/jcloudcs.com/127.0.0.1#5353
+server=/jclouddn.com/127.0.0.1#5353
+server=/jcloudec.com/127.0.0.1#5353
+server=/jcloudlb.com/127.0.0.1#5353
+server=/jcloudlive.com/127.0.0.1#5353
+server=/jcloudlv.com/127.0.0.1#5353
+server=/jcloudoss.com/127.0.0.1#5353
+server=/jcloudss.com/127.0.0.1#5353
+server=/jcloudstatic.com/127.0.0.1#5353
+server=/jcloudvideo.com/127.0.0.1#5353
+server=/jclps.com/127.0.0.1#5353
+server=/jd-app.com/127.0.0.1#5353
+server=/jd-ex.com/127.0.0.1#5353
+
+#-----nease---------------
+server=/126.com/127.0.0.1#5353
+server=/126.link/127.0.0.1#5353
+server=/126.net/127.0.0.1#5353
+server=/127.net/127.0.0.1#5353
+server=/163.com/127.0.0.1#5353
+server=/163industry.com
+server=/163mail.com/127.0.0.1#5353
+server=/163qiyukf.com/127.0.0.1#5353
+server=/163yun.com/127.0.0.1#5353
+server=/166.net/127.0.0.1#5353
+server=/haowu.link/127.0.0.1#5353
+server=/icourse163.org/127.0.0.1#5353
+server=/kaola.com/127.0.0.1#5353
+server=/lofter.com/127.0.0.1#5353
+server=/nease.net/127.0.0.1#5353
+server=/netease-inc.com/127.0.0.1#5353
+server=/netease.com/127.0.0.1#5353
+server=/netease.im/127.0.0.1#5353
+server=/qiyukf.com/127.0.0.1#5353
+server=/ydstatic.com/127.0.0.1#5353
+server=/yeah.net/127.0.0.1#5353
+server=/youdao.com/127.0.0.1#5353
+
+#-----sina---------------
+server=/97973.com/127.0.0.1#5353
 server=/sina.com/127.0.0.1#5353
-server=/sina.net/127.0.0.1#5353
+server=/sinaimg.cn/127.0.0.1#5353
+server=/sina.com.cn/127.0.0.1#5353
+server=/sinajs.cn/127.0.0.1#5353
+server=/sina.cn/127.0.0.1#5353
 server=/sinaapp.com/127.0.0.1#5353
-server=/weibo.com/127.0.0.1#5353
 server=/sinaedge.com/127.0.0.1#5353
 server=/sinaimg.com/127.0.0.1#5353
 server=/sinajs.com/127.0.0.1#5353
+server=/weibo.com/127.0.0.1#5353
+server=/weibo.com.cn/127.0.0.1#5353
+server=/weibo.cn/127.0.0.1#5353
+server=/weibocdn.com/127.0.0.1#5353
+server=/xhaiwai.com/127.0.0.1#5353
+
+#-----taobao---------------
+server=/1688.com/127.0.0.1#5353
+server=/etao.com/127.0.0.1#5353
+server=/juhuasuan.com/127.0.0.1#5353
+server=/lingshoujia.com/127.0.0.1#5353
+server=/mashort.cn/127.0.0.1#5353
+server=/pailitao.com/127.0.0.1#5353
+server=/taobao.com/127.0.0.1#5353
+server=/taobao.org/127.0.0.1#5353
+server=/taobaocdn.com/127.0.0.1#5353
+server=/taobizhong.com/127.0.0.1#5353
+server=/taopiaopiao.com/127.0.0.1#5353
+server=/tb.cn/127.0.0.1#5353
+server=/tbcache.com/127.0.0.1#5353
+server=/tburl.in/127.0.0.1#5353
+server=/tmall.com/127.0.0.1#5353
+server=/tmalltv.com/127.0.0.1#5353
+server=/tmjl.ai/127.0.0.1#5353
+
+#-----tencent---------------
+server=/apcdns.net/127.0.0.1#5353
+server=/foxmail.com/127.0.0.1#5353
+server=/foxmail.com.cn/127.0.0.1#5353
+server=/gtimg.cn/127.0.0.1#5353
 server=/gtimg.com/127.0.0.1#5353
 server=/gtimg.com.cn/127.0.0.1#5353
 server=/imqq.com/127.0.0.1#5353
 server=/myapp.com/127.0.0.1#5353
+server=/myqcloud.com/127.0.0.1#5353
 server=/qcloud.com/127.0.0.1#5353
 server=/qcloudimg.com/127.0.0.1#5353
+server=/qlogo.cn/127.0.0.1#5353
+server=/qpic.cn/127.0.0.1#5353
 server=/qq.com/127.0.0.1#5353
 server=/qqmail.com/127.0.0.1#5353
-server=/wechat.com/127.0.0.1#5353
+server=/qzone.com/127.0.0.1#5353
+server=/servicewechat.com/127.0.0.1#5353
 server=/smtcdns.com/127.0.0.1#5353
+server=/tencent.cn/127.0.0.1#5353
+server=/tencent.com/127.0.0.1#5353
+server=/tencent.com.cn/127.0.0.1#5353
+server=/tencent.com.hk/127.0.0.1#5353
+server=/tencent.net.cn/127.0.0.1#5353
+server=/tencent-cloud.com/127.0.0.1#5353
+server=/tencentmusic.com/127.0.0.1#5353
+server=/tencentyun.com/127.0.0.1#5353
+server=/tenpay.com/127.0.0.1#5353
+server=/wechat.com/127.0.0.1#5353
 server=/wegame.com/127.0.0.1#5353
 server=/weiyun.com/127.0.0.1#5353
-server=/weixin.com/127.0.0.1#5353
-server=/tenpay.com/127.0.0.1#5353
 server=/txcdn.com/127.0.0.1#5353
+
+#-----youku---------------
+server=/kumiao.com/127.0.0.1#5353
+server=/youku.com/127.0.0.1#5353
+server=/ykimg.com/127.0.0.1#5353
+server=/mmstat.com/127.0.0.1#5353
+server=/soku.com/127.0.0.1#5353
+server=/cibntv.net/127.0.0.1#5353
+
+#-----zhihu---------------
+server=/zhihu.com/127.0.0.1#5353
+server=/zhimg.com/127.0.0.1#5353
+
+#-----媒体---------------
+server=/xinhuanet.com/127.0.0.1#5353
+server=/chinanews.com/127.0.0.1#5353
+server=/cctv.com/127.0.0.1#5353
+server=/cctvpic.com/127.0.0.1#5353
+server=/ifeng.com/127.0.0.1#5353
 server=/huanqiu.com/127.0.0.1#5353
+
+server=/36kr.com/127.0.0.1#5353
+server=/cnblogs.com/127.0.0.1#5353
+server=/ipanda.com/127.0.0.1#5353
+server=/livechina.com/127.0.0.1#5353
+server=/jianshu.com/127.0.0.1#5353
+server=/douban.com/127.0.0.1#5353
+server=/v2ex.com/127.0.0.1#5353
+server=/51cto.com/127.0.0.1#5353
 server=/zlibs.com/127.0.0.1#5353
