--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -273,7 +273,7 @@ server=/126.link/127.0.0.1#5353
 server=/126.net/127.0.0.1#5353
 server=/127.net/127.0.0.1#5353
 server=/163.com/127.0.0.1#5353
-server=/163industry.com
+server=/163industry.com/127.0.0.1#5353
 server=/163mail.com/127.0.0.1#5353
 server=/163qiyukf.com/127.0.0.1#5353
 server=/163yun.com/127.0.0.1#5353
