--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -242,13 +242,18 @@ server=/qy.net/127.0.0.1#5353
 server=/71edge.com/127.0.0.1#5353
 
 #-----jd---------------
-server=/jd.com/127.0.0.1#5353
-server=/jdcdn.com/127.0.0.1#5353
-server=/jdcache.com/127.0.0.1#5353
-server=/jdcloud.com/127.0.0.1#5353
-server=/jdcloudcs.com/127.0.0.1#5353
-server=/jdcloud-api.com/127.0.0.1#5353
-server=/cloud-cdn.com/127.0.0.1#5353
+server=/3.cn/127.0.0.1#5353
+server=/300hu.com/127.0.0.1#5353
+server=/360buy.com/127.0.0.1#5353
+server=/360buyimg.com/127.0.0.1#5353
+server=/360top.com/127.0.0.1#5353
+server=/7fresh.com/127.0.0.1#5353
+server=/baitiao.com/127.0.0.1#5353
+server=/blackdragon.com/127.0.0.1#5353
+server=/caiyu.com/127.0.0.1#5353
+server=/chinabank.com.cn/127.0.0.1#5353
+server=/dao123.com/127.0.0.1#5353
+server=/jcloud-cdn.com/127.0.0.1#5353
 server=/jcloud-live.com/127.0.0.1#5353
 server=/jcloud-oss.com/127.0.0.1#5353
 server=/jcloud.com/127.0.0.1#5353
@@ -266,6 +271,43 @@ server=/jcloudvideo.com/127.0.0.1#5353
 server=/jclps.com/127.0.0.1#5353
 server=/jd-app.com/127.0.0.1#5353
 server=/jd-ex.com/127.0.0.1#5353
+server=/jd.cn/127.0.0.1#5353
+server=/jd.co.th/127.0.0.1#5353
+server=/jd.com/127.0.0.1#5353
+server=/jdcache.com/127.0.0.1#5353
+server=/jdcloud.com/127.0.0.1#5353
+server=/jdcloudcs.com/127.0.0.1#5353
+server=/jdcloud-api.com/127.0.0.1#5353
+server=/jddapeigou.com/127.0.0.1#5353
+server=/jddebug.com/127.0.0.1#5353
+server=/jddglobal.com/127.0.0.1#5353
+server=/jdjinrong.com/127.0.0.1#5353
+server=/jdpay.com/127.0.0.1#5353
+server=/jdpaydns.com/127.0.0.1#5353
+server=/jdx.com/127.0.0.1#5353
+server=/jdwl.com/127.0.0.1#5353
+server=/jingdongjinrong.com/127.0.0.1#5353
+server=/jingxi.com/127.0.0.1#5353
+server=/jkcsjd.com/127.0.0.1#5353
+server=/joybuy.com/127.0.0.1#5353
+server=/joybuy.es/127.0.0.1#5353
+server=/linglonglife.com/127.0.0.1#5353
+server=/mayshijia.com/127.0.0.1#5353
+server=/minitiao.com/127.0.0.1#5353
+server=/ocwms.com/127.0.0.1#5353
+server=/paidaojia.cn/127.0.0.1#5353
+server=/paipai.com/127.0.0.1#5353
+server=/prestodb-china.com/127.0.0.1#5353
+server=/qianxun.com/127.0.0.1#5353
+server=/qingzhouip.com/127.0.0.1#5353
+server=/toplife.com/127.0.0.1#5353
+server=/vg.com/127.0.0.1#5353
+server=/wangyin.com/127.0.0.1#5353
+server=/wdfok.com/127.0.0.1#5353
+server=/yhd.com/127.0.0.1#5353
+server=/yihaodianimg.com/127.0.0.1#5353
+server=/yiyaojd.com/127.0.0.1#5353
+server=/yizhitou.com/127.0.0.1#5353
 
 #-----nease---------------
 server=/126.com/127.0.0.1#5353
