--- a/ocserv.conf
+++ b/ocserv.conf
@@ -8,8 +8,8 @@ tcp-port = 443
 #server-cert = /etc/ocserv/server-cert.pem
 #server-key = /etc/ocserv/server-key.pem
 #ca-cert = /etc/ocserv/ca-cert.pem
-server-cert = /root/.acme.sh/wangyi.cf/wangyi.cf.cer
-server-key = /root/.acme.sh/wangyi.cf/wangyi.cf.key
+server-cert = /root/.acme.sh/vpn.wangyi.cf/vpn.wangyi.cf.cer
+server-key = /root/.acme.sh/vpn.wangyi.cf/vpn.wangyi.cf.key
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
