--- a/ocserv.conf
+++ b/ocserv.conf
@@ -3,7 +3,7 @@ auth = "plain[passwd=/etc/ocserv/passwd]"
 #ocpasswd -c /etc/ocserv/passwd your-username
 
 tcp-port = 443
-#udp-port = 440
+#udp-port = 44133
 
 #server-cert = /etc/ocserv/server-cert.pem
 #server-key = /etc/ocserv/server-key.pem
@@ -21,17 +21,17 @@ max-clients = 0
 max-same-clients = 0
 
 # timeout 
-#server-stats-reset-time = 604800
-#session-timeout = 86400
-#idle-timeout = 1200
-mobile-idle-timeout = 2400
+server-stats-reset-time = 604800
 keepalive = 32400
-#auth-timeout = 40
 dpd = 90
 mobile-dpd = 1800
 switch-to-tcp-timeout = 25
-persistent-cookies = true
-cookie-timeout = 86400
+#auth-timeout = 40
+#idle-timeout = 1200
+#session-timeout = 86400
+mobile-idle-timeout = 2400
+persistent-cookies = false
+cookie-timeout = 300
 deny-roaming = false
 rekey-time = 172800
 rekey-method = ssl
@@ -40,7 +40,7 @@ try-mtu-discovery = false
 mtu = 1480
 compression = false
 #no-compress-limit = 256
-output-buffer = 5000
+output-buffer = 100
 #use-utmp = true
 #use-occtl = true
 predictable-ips = true
@@ -49,6 +49,7 @@ tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 cisco-client-compat = true
 dtls-legacy = true
 
+#network
 device = vpns
 ipv4-network = 192.168.18.0/24
 #ipv4-netmask = 255.255.255.0
