--- a/ocserv.conf
+++ b/ocserv.conf
@@ -5,8 +5,6 @@ auth = "plain[passwd=/etc/ocserv/passwd]"
 tcp-port = 443
 #udp-port = 44133
 
-#server-cert = /etc/ocserv/server-cert.pem
-#server-key = /etc/ocserv/server-key.pem
 #ca-cert = /etc/ocserv/ca-cert.pem
 server-cert = /root/.acme.sh/vpn.wangyi.cf/vpn.wangyi.cf.cer
 server-key = /root/.acme.sh/vpn.wangyi.cf/vpn.wangyi.cf.key
@@ -30,14 +28,14 @@ switch-to-tcp-timeout = 25
 #idle-timeout = 1200
 #session-timeout = 86400
 mobile-idle-timeout = 2400
-persistent-cookies = false
-cookie-timeout = 300
+persistent-cookies = true
+cookie-timeout = 86400
 deny-roaming = false
 rekey-time = 172800
 rekey-method = ssl
 
 try-mtu-discovery = false
-mtu = 1480
+#mtu = 1480
 compression = false
 #no-compress-limit = 256
 output-buffer = 100
