--- a/ocserv.conf
+++ b/ocserv.conf
@@ -3,7 +3,7 @@ auth = "plain[passwd=/etc/ocserv/passwd]"
 #ocpasswd -c /etc/ocserv/passwd your-username
 
 tcp-port = 443
-#udp-port = 44133
+udp-port = 4433
 
 #ca-cert = /etc/ocserv/ca-cert.pem
 server-cert = /root/.acme.sh/vpn.wangyi.cf/vpn.wangyi.cf.cer
@@ -20,10 +20,11 @@ max-same-clients = 0
 
 # timeout 
 server-stats-reset-time = 604800
+session-timeout = 8640
 keepalive = 32400
-dpd = 90
+dpd = 30
 mobile-dpd = 1800
-switch-to-tcp-timeout = 25
+#switch-to-tcp-timeout = 25
 #auth-timeout = 40
 #idle-timeout = 1200
 #session-timeout = 86400
@@ -35,7 +36,7 @@ rekey-time = 172800
 rekey-method = ssl
 
 try-mtu-discovery = false
-#mtu = 1480
+mtu = 1480
 compression = false
 #no-compress-limit = 256
 output-buffer = 100
