--- a/ocserv.conf
+++ b/ocserv.conf
@@ -14,7 +14,7 @@ pid-file = /var/run/ocserv.pid
 run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
-isolate-workers = false
+isolate-workers = true
 max-clients = 0
 max-same-clients = 0
 
@@ -27,8 +27,7 @@ mobile-dpd = 1800
 #switch-to-tcp-timeout = 25
 #auth-timeout = 40
 #idle-timeout = 1200
-#session-timeout = 86400
-mobile-idle-timeout = 2400
+#mobile-idle-timeout = 2400
 persistent-cookies = true
 cookie-timeout = 86400
 deny-roaming = false
@@ -39,9 +38,9 @@ try-mtu-discovery = false
 mtu = 1480
 compression = false
 #no-compress-limit = 256
-output-buffer = 100
+#output-buffer = 100
 #use-utmp = true
-#use-occtl = true
+use-occtl = true
 predictable-ips = true
 ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
