--- a/ocserv.conf
+++ b/ocserv.conf
@@ -20,10 +20,11 @@ max-same-clients = 0
 
 # timeout 
 server-stats-reset-time = 604800
-session-timeout = 8640
+session-timeout = 86400
 keepalive = 32400
 dpd = 30
 mobile-dpd = 1800
+# avoid dtls reconnect switch to tcp 
 #switch-to-tcp-timeout = 25
 #auth-timeout = 40
 #idle-timeout = 1200
@@ -35,6 +36,7 @@ rekey-time = 172800
 rekey-method = ssl
 
 try-mtu-discovery = false
+# pppoe
 mtu = 1480
 compression = false
 #no-compress-limit = 256
