--- a/dingo-ecs-cn.service
+++ b/dingo-ecs-cn.service
@@ -5,8 +5,8 @@ Wants=network.target
 [Service]
 Type=simple
 #ExecStart=/usr/bin/dingo -port 5353 -gdns:auto -gdns:edns 202.102.192.0 -gdns:workers 5
-#ExecStart=/usr/bin/dingo -port 5353 -gdns:server 8.8.8.8 -gdns:sni dns.google -gdns:edns 202.102.192.0
-ExecStart=/usr/bin/dingo -port 5353 -gdns:server 223.5.5.5 -gdns:sni dns.alidns.com -gdns:edns 202.102.192.0
+ExecStart=/usr/bin/dingo -port 5353 -gdns:server 8.8.8.8 -gdns:sni dns.google -gdns:edns 202.102.192.0
+#ExecStart=/usr/bin/dingo -port 5353 -gdns:server 223.5.5.5 -gdns:sni dns.alidns.com -gdns:edns 202.102.192.0
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-abort
 StandardOutput=null
