--- a/wg0.conf
+++ b/wg0.conf
@@ -39,3 +39,9 @@ PublicKey = tpy5l4Tc8UPdVo3UsxNk7vnTpb3VpkxnN+8E04Ruuzs=
 AllowedIPs = 192.168.88.6/32
 #PersistentKeepalive = 25
 
+#qiyue
+[Peer]
+PublicKey = fPM9JWrjma2e+eTZtuTm1e/1PGGQAoke1yAb1pDJEWA=
+AllowedIPs = 192.168.88.7/32
+
+
