--- a/wg0.conf
+++ b/wg0.conf
@@ -33,15 +33,19 @@ PublicKey = Re+7ruSezEBfWzJ5BfaNuc+0cx1i881kl/uEzkf2Kzs=
 AllowedIPs = 192.168.88.5/32
 #PersistentKeepalive = 25
 
-#baba
+#baba-nb
 [Peer]
 PublicKey = tpy5l4Tc8UPdVo3UsxNk7vnTpb3VpkxnN+8E04Ruuzs=
 AllowedIPs = 192.168.88.6/32
 #PersistentKeepalive = 25
 
-#qiyue
+#qiyue-nb
 [Peer]
 PublicKey = fPM9JWrjma2e+eTZtuTm1e/1PGGQAoke1yAb1pDJEWA=
 AllowedIPs = 192.168.88.7/32
 
+#qiyue-phone
+[Peer]
+PublicKey = aapDUZaxx2dLJCUyYlUISvDoQUMCPtXGiWnHrD1/+18=
+AllowedIPs = 192.168.88.8/32
 
