--- a/wg0.conf
+++ b/wg0.conf
@@ -22,12 +22,12 @@ PublicKey = oe3veq5xmUyjeJE7PD0uFlzJuFmFsoJVgZL3gWtc/wo=
 AllowedIPs = 192.168.88.3/32
 #PersistentKeepalive = 25
 
-#phone
+#my-phone
 [Peer]
 PublicKey = /8jZ9OBxrrbels+lgI+6dOPvhvA5qEufRq72yQY8XCA=
 AllowedIPs = 192.168.88.4/32
 
-#notebook
+#office-nb
 [Peer]
 PublicKey = Re+7ruSezEBfWzJ5BfaNuc+0cx1i881kl/uEzkf2Kzs=
 AllowedIPs = 192.168.88.5/32
