--- a/ocserv.conf
+++ b/ocserv.conf
@@ -6,8 +6,8 @@ tcp-port = 443
 udp-port = 4433
 
 #ca-cert = /etc/ocserv/ca-cert.pem
-server-cert = /root/.acme.sh/vpn.wangyi.cf/vpn.wangyi.cf.cer
-server-key = /root/.acme.sh/vpn.wangyi.cf/vpn.wangyi.cf.key
+server-cert = /root/.acme.sh/gia.wangyi.cf_ecc/gia.wangyi.cf.cer
+server-key = /root/.acme.sh/gia.wangyi.cf_ecc/gia.wangyi.cf.key
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
