--- a/ocserv.conf
+++ b/ocserv.conf
@@ -3,11 +3,11 @@ auth = "plain[passwd=/etc/ocserv/passwd]"
 #ocpasswd -c /etc/ocserv/passwd your-username
 
 tcp-port = 443
-udp-port = 4433
+udp-port = 443
 
 #ca-cert = /etc/ocserv/ca-cert.pem
-server-cert = /root/.acme.sh/gia.wangyi.cf_ecc/gia.wangyi.cf.cer
-server-key = /root/.acme.sh/gia.wangyi.cf_ecc/gia.wangyi.cf.key
+server-cert = /etc/ocserv/server-cert.pem
+server-key =  /etc/ocserv/server-key.pem
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
