--- a/ocserv.conf
+++ b/ocserv.conf
@@ -5,9 +5,9 @@ auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 tcp-port = 443
 udp-port = 443
 
-#ca-cert = /etc/ocserv/ca-cert.pem
-server-cert = /etc/ocserv/server-cert.pem
-server-key =  /etc/ocserv/server-key.pem
+ca-cert = /etc/ocserv/chain.pem
+server-cert = /etc/ocserv/cert.pem
+server-key =  /etc/ocserv/privkey.pem
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
