--- a/dingo-alidns-cn.service
+++ b/dingo-alidns-cn.service
@@ -4,7 +4,7 @@ Wants=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/dingo -port 5353 -gdns:server 223.5.5.5 -gdns:sni dns.alidns.com -gdns:edns 202.102.192.0
+ExecStart=/usr/bin/dingo -port 5353 -gdns:server 8.8.8.8 -gdns:sni dns.google.com -gdns:edns 61.177.77.0
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-abort
 StandardOutput=null
