--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -10,8 +10,9 @@ no-poll
 #strict-order 
 cache-size = 1000
 
-address=/www.ftchinese.com/118.143.65.103
-address=/ftchinese.com/118.143.65.103
+address=/baidu.com/39.156.66.10
+address=/www.baidu.com/14.215.177.38
+address=/map.baidu.com/180.97.34.157
 
 all-servers 
 #server=8.8.8.8
