--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -1,18 +1,30 @@
 user daemon
-pidfile /var/run/sniproxy.pid
+pidfile /var/tmp/sniproxy.pid
+
+error_log {
+    syslog daemon
+    priority notice
+}
 
 resolver {
-    nameserver 8.8.8.8
-    mode ipv4_only
+    nameserver 1.1.1.1
+    nameserver 1.0.0.1
+    mode ipv6_first
 }
-listener 192.168.88.1:443 {
-    protocol tls
-    fallback 44.44.44.44:44
+listener 0.0.0.0:80 {
+    proto http
+}
+
+listener 0.0.0.0:443 {
+    proto tls
+}
+listen [::]:80 {
+    proto http
+}
+listen [::]:443 {
+    proto tls
 }
 
 table {
-    ct.wangyi.cf           127.0.0.1:5443
-    github-production-release-asset-2e65be.s3.amazonaws.com  *
-    .*storage\.live\.com   *
-    .*files\.1drv\.com     *
+    *    *
 }
