--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -9,7 +9,7 @@ error_log {
 resolver {
     nameserver 1.1.1.1
     nameserver 1.0.0.1
-    mode ipv6_first
+    mode ipv4_only
 }
 listener 0.0.0.0:80 {
     proto http
@@ -18,13 +18,7 @@ listener 0.0.0.0:80 {
 listener 0.0.0.0:443 {
     proto tls
 }
-listen [::]:80 {
-    proto http
-}
-listen [::]:443 {
-    proto tls
-}
 
 table {
-    *    *
+    .*    *
 }
