--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -11,11 +11,19 @@ resolver {
     nameserver 1.0.0.1
     mode ipv4_only
 }
-listener 0.0.0.0:80 {
+listen 0.0.0.0:80 {
     proto http
 }
 
-listener 0.0.0.0:443 {
+listen 0.0.0.0:443 {
+    proto tls
+}
+
+listen [::]:80 {
+    proto http
+}
+
+listener [::]:443 {
     proto tls
 }
 
