--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -9,7 +9,7 @@ error_log {
 resolver {
     nameserver 1.1.1.1
     nameserver 1.0.0.1
-    mode ipv4_only
+    mode ipv6_first
 }
 listen 0.0.0.0:80 {
     proto http
