--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -21,10 +21,12 @@ listen 0.0.0.0:443 {
 
 listen [::]:80 {
     proto http
+    ipv6_v6only yes
 }
 
-listener [::]:443 {
+listen [::]:443 {
     proto tls
+    ipv6_v6only yes
 }
 
 table {
